# rosetta-squint

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md
.github/workflows/: codeql.yml  decode-ci.yml  hash-ci.yml  maven-publish.yml  squint-ci.yml
decode/: .gitignore  LICENSE  README.md  SECURITY.md  STATUS.md  USAGE.md
decode/rust/rosetta-image-decode/: .gitignore  Cargo.toml  README.md  build.rs
decode/rust/rosetta-image-decode/.cargo/: config.toml
decode/rust/rosetta-image-decode/c-src/: jpeg_decode_shim.c
decode/rust/rosetta-image-decode/examples/: decode-cli.rs
decode/rust/rosetta-image-decode/fuzz/: .gitignore  Cargo.toml  README.md
decode/rust/rosetta-image-decode/fuzz/corpus/decode_any/: bad-magic.heic  bad-magic.tif  larger-128x96.heic
decode/rust/rosetta-image-decode/fuzz/corpus/decode_with_prefix/: 16x16-grayscale-lzw.tif  16x16-rgba.heic  32x32-q90.heic  64x64-q90.heic  8x8-rgb-deflate.tif  8x8-rgb-lzw.tif
decode/rust/rosetta-image-decode/fuzz/corpus/detect_format/: 32x32-q50.heic  32x32-rgba.heic
decode/rust/rosetta-image-decode/fuzz/fuzz_targets/: decode_any.rs  decode_with_prefix.rs  detect_format.rs
decode/rust/rosetta-image-decode/src/: bmp.rs  decode.rs  error.rs  gif.rs  heic.rs  jpeg.rs  lib.rs  limits.rs  png.rs  tiff.rs  types.rs  webp.rs
decode/rust/rosetta-image-decode/tests/: group2_gif.rs  group2_goldens.rs  group2_heic.rs  group2_jpeg.rs  group2_png.rs  group2_tiff.rs  group2_webp.rs  group3_detection.rs  group4_errors.rs  group5_invariants.rs  testkit.rs
decode/rust/rosetta-squint-decode/: Cargo.toml  README.md
decode/rust/rosetta-squint-decode/examples/: decode-cli.rs
decode/rust/rosetta-squint-decode/fuzz/: .gitignore  Cargo.toml  README.md
decode/rust/rosetta-squint-decode/fuzz/corpus/decode_any/: corrupt-tag.tif  photo-96.heic  rect-24x16.heic
decode/rust/rosetta-squint-decode/fuzz/corpus/decode_with_prefix/: 16x16-rgb-lzw.tif  truncated.heic
decode/rust/rosetta-squint-decode/fuzz/corpus/detect_format/: avif.heic  larger-photo-128.tif  rect-24x16-deflate.tif
decode/rust/rosetta-squint-decode/fuzz/fuzz_targets/: decode_any.rs  decode_with_prefix.rs  detect_format.rs
decode/rust/rosetta-squint-decode/src/: bmp.rs  decode.rs  dimension_sniff.rs  error.rs  gif.rs  heic.rs  jpeg.rs  lib.rs  webp.rs
decode/rust/rosetta-squint-decode/tests/: group2_gif.rs  group2_goldens.rs  group2_heic.rs  group2_jpeg.rs  group2_png.rs  group2_tiff.rs  group2_webp.rs  group3_detection.rs  group4_errors.rs  group5_invariants.rs  testkit.rs
decode/spec/: SPEC.md  consistency.py  cross_port_diff.sh  errors.json  errors.schema.json  formats.json  formats.schema.json  goldens.json  goldens.schema.json  pyproject.toml  regenerate.py  requirements.txt  synth_bmp.py  synth_gif.py  synth_heic.py  synth_jpeg.py  synth_png.py  synth_tiff.py  synth_too_large.py  synth_webp.py
decode/spec/fixtures/bmp/valid/: REAL_FIXTURES_LICENSE.md
decode/spec/fixtures/heic/invalid/: too-large.heic
decode/spec/fixtures/heic/valid/: 16x16-lossless.heic  16x16.heic
decode/spec/fixtures/png/valid/: REAL_FIXTURES_LICENSE.md
decode/spec/fixtures/tiff/invalid/: too-large.tif
decode/spec/fixtures/tiff/valid/: 16x16-rgb-none.tif  8x8-grayscale-none.tif  8x8-rgb-none.tif
docs/upstream-reports/: swift-png-extraneousImageData.md
examples/: README.md
examples/cdp/: package.json  raw-cdp.ts
examples/playwright/: package.json  visual-regression.ts
examples/playwright-extension/: README.md
hash/: .gitignore  LICENSE  README.md  SECURITY.md  STATUS.md  USAGE.md
hash/python/: README.md  pyproject.toml
hash/python/rosetta_imagehash/: __init__.py  _impl.py
hash/python/rosetta_squint_hash/: __init__.py  _impl.py
hash/python/tests/: test_reexports.py  test_whash_db4_robust.py
hash/rust/rosetta-image-hash/: Cargo.toml  DECODER_NOTES.md  README.md
hash/rust/rosetta-image-hash/fuzz/: Cargo.toml  README.md
hash/rust/rosetta-image-hash/fuzz/fuzz_targets/: hex_to_flathash.rs  hex_to_hash.rs  hex_to_multihash.rs
hash/rust/rosetta-image-hash/src/: average.rs  colorhash.rs  crop_resistant.rs  dhash.rs  lib.rs  multihash.rs  phash.rs  whash.rs
hash/rust/rosetta-image-hash/src/internal/: bitpack.rs  dct.rs  haar.rs  lanczos.rs  mod.rs  pil_gaussian_blur.rs
hash/rust/rosetta-image-hash/tests/: _testkit_compile.rs  group1_gaussian_blur_test.rs  group1_lanczos_test.rs  group1_median_filter_test.rs  group1_segmentation_test.rs  group2_test.rs  group3_test.rs  group4_test.rs  group5_test.rs
hash/rust/rosetta-image-hash/tests/testkit/: goldens.rs  mod.rs  spec_path.rs
hash/rust/rosetta-squint-hash/: Cargo.toml  README.md
hash/rust/rosetta-squint-hash/fuzz/: Cargo.toml  README.md
hash/rust/rosetta-squint-hash/fuzz/fuzz_targets/: hex_to_flathash.rs  hex_to_hash.rs  hex_to_multihash.rs
hash/rust/rosetta-squint-hash/src/: hex.rs  lib.rs  phash.rs
hash/rust/rosetta-squint-hash/src/internal/: bitpack.rs  db4.rs  find_segments.rs  img_rgb.rs  mod.rs  pil_gray.rs  pil_hsv.rs  pil_median_filter.rs
hash/rust/rosetta-squint-hash/tests/: group1_gaussian_blur_test.rs  group1_lanczos_test.rs  group1_median_filter_test.rs  group1_segmentation_test.rs  group2_test.rs  group3_test.rs  group4_test.rs  group5_test.rs
hash/rust/rosetta-squint-hash/tests/testkit/: goldens.rs  lanczos_case.rs  mod.rs  predecoded.rs
hash/spec/: README.md  SPEC.md  consistency.py  db4_cases.json  dct_cases.json  gaussian_blur_cases.json  gen_unit_cases.py  goldens.json  goldens.schema.json  grayscale_cases.json  haar_cases.json  hsv_cases.json  median_filter_cases.json  pyproject.toml  regenerate.py  requirements.txt  segmentation_cases.json
hash/spec/lanczos_cases/: MANIFEST.json
squint/python/: .gitignore  README.md  pyproject.toml
squint/python/rosetta_squint/: __init__.py  _impl.py
squint/python/tests/: test_squint.py
squint/rust/rosetta-squint/: Cargo.toml  README.md
squint/rust/rosetta-squint/examples/: squint-cli.rs
squint/rust/rosetta-squint/src/: lib.rs
squint/rust/rosetta-squint/tests/: integration_test.rs
(+533 files in other folders)
