[package]
name = "rosetta-image-decode"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Byte-exact PIL-compatible image decoder library (Rust)"
license = "BSD-2-Clause"
repository = "https://github.com/wmetcalf/rosetta-image-decode"

[dependencies]
thiserror = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
