[package]
name = "rosetta-image-hash"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Byte-exact port of Python imagehash 4.3.2 to Rust"
license = "BSD-2-Clause"
repository = "https://github.com/wmetcalf/rosetta-image-hash"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
