[package]
name = "rosetta-squint-decode-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rosetta-squint-decode]
path = ".."

[[bin]]
name = "decode_any"
path = "fuzz_targets/decode_any.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_with_prefix"
path = "fuzz_targets/decode_with_prefix.rs"
test = false
doc = false
bench = false

[[bin]]
name = "detect_format"
path = "fuzz_targets/detect_format.rs"
test = false
doc = false
bench = false
