[package]
name = "rosetta-image-hash-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rosetta-image-hash]
path = ".."

[[bin]]
name = "hex_to_hash"
path = "fuzz_targets/hex_to_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hex_to_flathash"
path = "fuzz_targets/hex_to_flathash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hex_to_multihash"
path = "fuzz_targets/hex_to_multihash.rs"
test = false
doc = false
bench = false
